--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=root
-spring.data.mongodb=12345678
-spring.data.mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017/lmsDB
+server.port=5000
